added query command reworked tests
